Final correction of spelling mistakes, the site is done now.

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -67,7 +67,7 @@
         </section>
 
         <section id=total>
-            <h3>Total : 71,96 € (67,96 € + 4 € Frais de Ports)</h3>
+            <h3>Total : 71,96 € (67,96 € + 4 € Frais de Port)</h3>
             <a class="button" href="cart.html">Confirmer ma commande</a>
         </section>
 
@@ -76,7 +76,7 @@
     <footer>
         <ul>
             <li><a href="us.html">Qui sommes nous ?</a></li>
-            <li><a href="ourMethods.html">Détails tecniques</a></li>
+            <li><a href="ourMethods.html">Détails techniques</a></li>
         </ul>
     </footer>
 </body>
