--- a/pages/popularMasks.html
+++ b/pages/popularMasks.html
@@ -223,7 +223,7 @@
     <footer>
         <ul>
             <li><a href="us.html">Qui sommes nous ?</a></li>
-            <li><a href="ourMethods.html">Détails tecniques</a></li>
+            <li><a href="ourMethods.html">Détails techniques</a></li>
         </ul>
     </footer>
 </body>
