--- a/pages/productPage.html
+++ b/pages/productPage.html
@@ -42,14 +42,14 @@
             <div class="productDesc">
                 <h4>Masque motif guirlande colorée</h4>
                 <p>
-                    Nos masque sont d'une qualité exeptionnelle afin de vous apporter un confort utlime pendant vos
-                    longues journés au travail.
+                    Nos masque sont d'une qualité exceptionnelle afin de vous apporter un confort ultime pendant vos
+                    longues journées au travail.
                     Notre methode d'impression est infaillible, et malgré de futurs nombreux lavages, Le motif restera
                     toujours aussi net.
                 </p>
 
                 <p>
-                    Les masque sont lavables autant de fois que vous le souhaitez.
+                    Les masques sont lavables autant de fois que vous le souhaitez.
                     Ils sont constitués de deux couches, entres lesquels vous pouvez inserer un filtre pour encore plus
                     de sécurité.
                 </p>
@@ -68,7 +68,7 @@
     <footer>
         <ul>
             <li><a href="us.html">Qui sommes nous ?</a></li>
-            <li><a href="ourMethods.html">Détails tecniques</a></li>
+            <li><a href="ourMethods.html">Détails techniques</a></li>
         </ul>
     </footer>
 
