--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <footer>
         <ul>
             <li><a href="pages/us.html">Qui sommes nous ?</a></li>
-            <li><a href="pages/ourMethods.html">Détails tecniques</a></li>
+            <li><a href="pages/ourMethods.html">Détails techniques</a></li>
         </ul>
     </footer>
 
