--- a/pages/us.html
+++ b/pages/us.html
@@ -35,15 +35,15 @@
     <main>
         <h3 style="margin-left: 0">Qui sommes nous ?</h3>
         <h4></h4>
-        <p>Ce site a été créé dans le carde d'un projet de DUT.</p>
-        <p>Je m'apelle Anthelme Buchaille, et je suis étudiant en DUT Informatique. Ce site est mon travail pour le
+        <p>Ce site a été créé dans le cadre d'un projet de DUT.</p>
+        <p>Je m'appelle Anthelme Buchaille, et je suis étudiant en DUT Informatique. Ce site est mon travail pour le
             module Web.</p>
-        <p>Le but était de faire une maquete de site de vente en ligne, je me suis dit que les masques étaient
+        <p>Le but était de faire une maquette de site de vente en ligne, je me suis dit que les masques étaient
             d'actualité, donc j'ai choisis ce thème.</p>
-        <p>J'ai choisis de créer un paterne et de le garder sur tout le site, ainsi que de garder une certaine pallette
+        <p>J'ai choisis de créer un patern et de le garder sur tout le site, ainsi que de garder une certaine pallette
             de couleur afin de grader la même identitée sur toutes les pages.</p>
-        <p>Ce choix m'a permi d'avoir un rendu propre, minimaliste et, je trouve, professionnel.</p>
-        <p>Je suis pas a l'orginine des design et des images des masques. Si vous voulez en acheter, ils sont en vente
+        <p>Ce choix m'a permis d'avoir un rendu propre, minimaliste et, je trouve, professionnel.</p>
+        <p>Je suis pas a l'origine des designs et des images des masques. Si vous voulez en acheter, ils sont en vente
             sur <a href="https://www.redbubble.com/">Redbubble</a>.</p>
         <p>Ce site a été créé avec pour contraintes :</p>
         <ol id="constraints">
@@ -60,7 +60,7 @@
     <footer>
         <ul>
             <li><a href="us.html">Qui sommes nous ?</a></li>
-            <li><a href="ourMethods.html">Détails tecniques</a></li>
+            <li><a href="ourMethods.html">Détails techniques</a></li>
         </ul>
     </footer>
 
